# cupyturbo

./: .gitignore  README.md  dns.prof  dns_main.py  dns_simulator.py  dns_wrapper.py  gpu_test.py  macos.spec  numpy_dns_main.py  numpy_dns_simulator.py  numpy_dns_wrapper.py  pyproject.toml  win32.spec  win32_lean.spec
cupyturbo/: dns_main.py  dns_main_oglm.py  dns_main_oglw.py  dns_simulator.py  dns_simulator_cufft.py  dns_simulator_fps.py  dns_simulator_numpy.py  dns_wrapper.py  gpu_test.py
fps/: fps_compare.py  fps_sweep.sh  fps_sweep.txt  fps_sweep_cuda.csv  fps_sweep_cupy.csv  fps_sweep_numpy.csv  fps_sweep_numpy.txt  fps_sweep_scipy.csv
opengl/: dns_main_base.py  dns_main_oglw.py
scipy/: scipy_main.py  scipy_simulator.py  scipy_wrapper.py
scipyturbo/: scipy_main.py  scipy_simulator.py  scipy_simulator_ns.py  scipy_simulator_optimized.py  scipy_wrapper.py
