[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cupyturbo"
version = "0.1.0"
description = "2D Turbulence Simulation (NumPy/CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Torbjörn Sjögren" }
]
dependencies = [
    "numpy>=2.0.0",
    "imageio",
    "pyqt6",
]

[tool.setuptools]
py-modules = [
    "dns_main",
    "dns_simulator",
    "dns_wrapper",
    "gpu_test",
]