[project]
name = "mannetroll-cupyturbo"
version = "0.1.5"
description = "2D DNS turbulence simulator (NumPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
  "numpy>=2.4,<3",
  "Pillow>=12,<13",
  "PySide6>=6.10.1,<7",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=13.6.0",
  "fastrlock>=0.8",
]

[project.scripts]
turbulence = "cupyturbo.dns_main:main"
fps = "cupyturbo.dns_simulator:main"
cufft = "cupyturbo.dns_simulator_cufft:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["cupyturbo","scipyturbo"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
